# WanAndoird

./: build.gradle  configs.gradle  gradle.properties  module.build.gradle  settings.gradle
BAPM/: build.gradle
BAPM/src/androidTest/java/com/lw/bapm/: ExampleInstrumentedTest.kt
BAPM/src/main/: AndroidManifest.xml
BAPM/src/main/java/com/lw/bapm/: ActivityHootUtils.kt  BAPM.kt
BLog/: build.gradle
BLog/src/main/cpp/: CMakeLists.txt  blog.cpp
BStartUp/: build.gradle
BStartUp/src/main/: AndroidManifest.xml
IncrementalUpdate/: build.gradle
IncrementalUpdate/src/main/cpp/: CMakeLists.txt  bspatch.c  incrementalupdate.cpp
IncrementalUpdate/src/main/cpp/bzip/: bspatch.h
app/: build.gradle  google-services.json  lwkey.jks
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_scrolling.xml  fragment_home.xml  fragment_last.xml  fragment_second.xml  item_basic.xml
app/src/main/res/menu/: menu.xml  menu_scrolling.xml
app/src/main/res/navigation/: nav_graph_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: nfc.xml
bluetooth/: build.gradle
bluetooth/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
kotlin/: build.gradle
module_home/: build.gradle
module_home/src/main/: AndroidManifest.xml
module_home/src/main/module/: AndroidManifest.xml
module_home/src/main/res/layout/: home_activity_home.xml
mvvm/: build.gradle
mvvm/src/main/: AndroidManifest.xml
network/: build.gradle
network/src/main/: AndroidManifest.xml
(+108 files in other folders)
